--- a/2DPatterns.csproj
+++ b/2DPatterns.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.15.5" />
-    <PackageReference Include="Platform.Data.Doublets" Version="0.6.6" />
+    <PackageReference Include="Platform.Data.Doublets.Sequences" Version="0.0.1" />
   </ItemGroup>
 
   <ItemGroup>
